Fix spacing issues

--- a/docs.kosli.com/assets/_custom.scss
+++ b/docs.kosli.com/assets/_custom.scss
@@ -53,7 +53,7 @@ aside.book-toc .book-toc-content {
 .markdown img {
     border-radius: 7px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
-    margin: 1rem;
+    margin: 1rem 0rem;
 }
 
 .book-brand {
