--- a/docs.kosli.com/assets/_home.scss
+++ b/docs.kosli.com/assets/_home.scss
@@ -31,6 +31,10 @@
     display: flex;
     flex-direction: column;
 
+    p {
+        margin-top: 0;
+    }
+
     img {
         width: 50px;
     }
